<resources>
    <string name="app_name">Safidence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_property_unit">Property Unit</string>
    <string name="menu_contract">Contract</string>
    <string name="menu_renew_contract">Renew Contract</string>
    <string name="menu_end_contract">End Contract</string>
    <string name="menu_payment">Payment History</string>
    <string name="menu_docs">Documents &amp; Policies</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="home">Home</string>
    <string name="request">Request</string>
    <string name="payments">Payments</string>
    <string name="announcements">Announcements</string>
    <string name="alerts">Alerts</string>
    <string name="documents">Documents</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="national_id">National Id</string>
    <string name="menu_requests">Request</string>
    <string name="update">Update</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="please_wait">Please wait</string>
    <string name="forget_password">Forget Password</string>
    <string name="currently_there_is_no_policy_document">Currently there is no policy document.</string>
</resources>