<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-3dp"
    android:layout_marginBottom="-3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/iv_top_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:rotation="0"
        android:scaleX="3.3"
        android:scaleY="1"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/iv_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:rotation="0"
        android:scaleX="-3.3"
        android:scaleY="-1"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_cnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/white"
            android:hint="@string/national_id"
            app:hintTextColor="@color/blue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNationalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="13"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/blue"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>