<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <include app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/layout_bar_bg"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Hello Azim!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_request"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_constraintHeight_percent="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/request"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_baseline_request_page" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_Payments"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_constraintHeight_percent="0.48"
            app:layout_constraintStart_toEndOf="@id/cv_request"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/payments"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_baseline_payments" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_announcements"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_constraintHeight_percent="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_request"
            app:layout_constraintWidth_percent="0.48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/announcements"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_baseline_announcement" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_documents"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:strokeWidth="1dp"
            app:strokeColor="@color/purple_500"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:layout_constraintHeight_percent="0.48"
            app:layout_constraintStart_toEndOf="@id/cv_announcements"
            app:layout_constraintTop_toBottomOf="@id/cv_Payments"
            app:layout_constraintWidth_percent="0.48">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/documents"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:drawableTopCompat="@drawable/ic_baseline_description" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>